@@ -3,6 +3,7 @@ package me.senseiwells.essentialclient.clientscript.core;
 import me.senseiwells.arucas.api.ThreadHandler;
 import me.senseiwells.arucas.core.Arucas;
 import me.senseiwells.arucas.core.Interpreter;
+import me.senseiwells.arucas.exceptions.FatalError;
 import me.senseiwells.arucas.utils.Util;
 import me.senseiwells.essentialclient.EssentialClient;
 import me.senseiwells.essentialclient.utils.EssentialUtils;
@@ -12,9 +13,11 @@ import net.minecraft.text.Text;
 import net.minecraft.util.Formatting;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.LocalDateTime;
+import java.text.SimpleDateFormat;
+import java.util.Date;
 
 public class ClientScriptThreadHandler extends ThreadHandler {
 	private static final String ISSUE_TRACKER = "https://github.com/senseiwells/EssentialClient/issues/new";
@@ -24,16 +27,23 @@ public class ClientScriptThreadHandler extends ThreadHandler {
 	}
 
 	@Override
+	protected void handleFatalError(FatalError fatalError) {
+		this.handleFatalError((Throwable) fatalError);
+	}
+
+	@Override
 	protected void handleFatalError(Throwable throwable) {
-		EssentialUtils.sendMessage("§cAn error occurred while running '%s'".formatted(this.getInterpreter().getName()));
-		EssentialUtils.sendMessage("§cIf you believe this is a bug please report it");
+		EssentialUtils.sendMessage("\n§cAn error occurred while running '%s'".formatted(this.getInterpreter().getName()));
 
-		String path = this.writeCrashReport(throwable).toAbsolutePath().toString();
-		Text crashReport = Texts.literal("§cA crash report has been saved to '%s'".formatted(path))
-			.styled(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.OPEN_FILE, path)));
-
+		String path = this.writeCrashReport(this.getInterpreter(), throwable).toAbsolutePath().toString();
+		Text crashReport = Texts.literal("§cA crash report has been saved to:\n").append(
+			Texts.literal(path + "\n")
+				.formatted(Formatting.UNDERLINE)
+				.styled(style -> style.withClickEvent(new ClickEvent(ClickEvent.Action.OPEN_FILE, path)))
+		);
 		EssentialUtils.sendMessage(crashReport);
 
+		EssentialUtils.sendMessage("§cIf you believe this is a bug please report it, please include the crash report:");
 		Text issueTracker = Texts.literal(ISSUE_TRACKER + "\n")
 			.formatted(Formatting.UNDERLINE)
 			.styled((style) -> style.withClickEvent(new ClickEvent(ClickEvent.Action.OPEN_URL, ISSUE_TRACKER)));
@@ -41,8 +51,17 @@ public class ClientScriptThreadHandler extends ThreadHandler {
 		EssentialUtils.sendMessage(issueTracker);
 	}
 
-	private Path writeCrashReport(Throwable throwable) {
+	private Path writeCrashReport(Interpreter interpreter, Throwable throwable) {
 		String stacktrace = ExceptionUtils.getStackTrace(throwable);
+		String scriptTrace = "";
+		if (throwable instanceof FatalError error) {
+			scriptTrace = """
+				### StackTrace:
+				```
+				%s
+				```
+				""".formatted(error.format(interpreter));
+		}
 		String report = """
 			### Minecraft Version: `%s`
 			### Essential Client Version: `%s`
@@ -52,7 +71,7 @@ public class ClientScriptThreadHandler extends ThreadHandler {
 			// %s
 			%s
 			```
-			### Crash:
+			%s### Crash:
 			```
 			%s
 			```
@@ -62,13 +81,17 @@ public class ClientScriptThreadHandler extends ThreadHandler {
 			Arucas.getVERSION(),
 			this.getInterpreter().getName(),
 			this.getInterpreter().getContent(),
+			scriptTrace,
 			stacktrace
 		);
-		// get current date and time
-		String date = LocalDateTime.now().toString();
-		Path crashPath = EssentialUtils.getEssentialConfigFile().resolve("script-crashes").resolve("crash-" + date);
+		String date = new SimpleDateFormat("dd-MM-yyyy_HH-mm-ss").format(new Date());
+		Path crashPath = EssentialUtils.getEssentialConfigFile().resolve("script-crashes").resolve("crash-" + date + ".txt");
 		Util.File.INSTANCE.ensureParentExists(crashPath);
-		EssentialUtils.throwAsRuntime(() -> Files.write(crashPath, report.getBytes()));
+		try {
+			Files.writeString(crashPath, report);
+		} catch (IOException e) {
+			EssentialClient.LOGGER.error("Failed to write script crash report:\n{}\n\n{}", report, e);
+		}
 		return crashPath;
 	}
 }
